# AirBnB-Clone

./: pyproject.toml  render.yaml
bookings/: admin.py  serializers.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: admin.py  models.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
common/: models.py
config/: settings.py
direct_messages/migrations/: 0001_initial.py
experiences/: admin.py  models.py  serializers.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_experience_category_alter_perk_details_and_more.py  0003_perk_category.py  0004_remove_perk_category_alter_experience_category_and_more.py
medias/: models.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_file_alter_video_file.py  0003_alter_photo_experience_alter_photo_room_and_more.py
reviews/: admin.py  models.py
reviews/migrations/: 0001_initial.py  0002_alter_review_experience_alter_review_room_and_more.py
rooms/: admin.py  models.py  serializers.py  tests.py  views.py
rooms/migrations/: 0001_initial.py  0002_room_name_alter_amenity_description.py  0003_alter_amenity_options_and_more.py  0004_room_category.py  0005_alter_room_amenities_alter_room_category_and_more.py
rooms/templates/: all_rooms.html  room_detail.html
users/: admin.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_avatar.py  0003_alter_user_avatar.py  0004_alter_user_is_host.py
wishlists/: views.py
wishlists/migrations/: 0001_initial.py  (+1 more)
